--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Yes">yes</string>
     <string name="no">No</string>
+    <string name="done">Done</string>
 </resources>
