--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,6 @@
     <string name="Yes">yes</string>
     <string name="no">No</string>
     <string name="done">Done</string>
+    <string name="equipements">Equipements</string>
+    <string name="equipments">Equipments</string>
 </resources>
